# dbus-glib

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  Android.mk  CONTRIBUTING.md  COPYING  Doxyfile.in  HACKING  INSTALL  Makefile.am  NEWS  autogen.sh  configure.ac  configure.in  dbus-glib-1.pc.in
dbus/: Makefile.am  dbus-bash-completion-helper.c  dbus-binding-tool-glib.c  dbus-binding-tool-glib.h  dbus-gidl.c  dbus-gidl.h  dbus-glib-lowlevel.h  dbus-glib-tool.c  dbus-glib-tool.h  dbus-glib.c  dbus-glib.h  dbus-gloader-expat.c  dbus-gmain.c  dbus-gmain.h  dbus-gmarshal.c  dbus-gmarshal.h  dbus-gobject.c  dbus-gobject.h  dbus-gparser.c  dbus-gparser.h  dbus-gproxy.c  dbus-gsignature.c  dbus-gsignature.h  dbus-gtest-main.c  dbus-gtest.c  dbus-gtest.h  dbus-gthread.c  dbus-gtool-test.h  dbus-gtype-specialized-priv.h  dbus-gtype-specialized.c  dbus-gtype-specialized.h  dbus-gutils.c  dbus-gutils.h  dbus-gvalue-parse-variant.c  dbus-gvalue-parse-variant.h  dbus-gvalue-utils.c  dbus-gvalue-utils.h  dbus-gvalue.c  dbus-gvalue.h  make-dbus-glib-error-enum.sh
dbus-gmain/: Makefile.am  README  dbus-gmain.c
dbus-gmain/tests/: 30574.c  test-thread-client.c  test-thread-server.c  util.c  util.h
dbus/examples/: Makefile.am  example-client.c  example-service.c  example-signal-emitter.c  example-signal-recipient.c
dbus/examples/statemachine/: Makefile.am  statemachine-client.c  statemachine-server.c  statemachine-server.h  statemachine.c  statemachine.h
doc/: Makefile.am  dbus-binding-tool.1  dbus-binding-tool.1.in
doc/api/: README
doc/reference/: Makefile.am  dbus-glib-docs.sgml  dbus-glib-sections.txt  dbus-glib-undocumented.txt
glib/: dbus-glib.h
m4/: gtk-doc.m4
test/: Makefile.am  decode-gcov.c  errors.c  specialized-types.c  test-service.c
test/core/: 30574.c  5688.c  Makefile.am  error-mapping.c  my-object-subclass.c  my-object-subclass.h  my-object.c  my-object.h  peer-client.c  peer-on-bus.c  peer-server.c  private.c  proxy-noc.c  proxy-peer.c  registrations.c  run-peer-test.sh  run-test.sh  shared-bus.c  test-dbus-glib.c  test-gvariant.c  test-profile.c  test-service-glib.c  test-service-glib.xml  test-thread-client.c  test-thread-server.c  test-types.c  test-variant-recursion.c  unsupported-type.c
test/core/manual/: invalid-usage.c
test/data/valid-service-files/: debug-glib.service.in
test/glib/: Makefile.am  run-test.sh  test-dbus-glib.c
test/interfaces/: .Makefile.am.swp  Makefile.am  run-test.sh  test-client.c  test-dup-prop.c  test-dup-prop.h  test-goodbye.xml  test-hello.xml  test-interfaces.c  test-interfaces.h  test-objects.c  test-objects.h  test-server.c  test-song.xml  valid-annotations.xml
test/manual/: Makefile.am  invalid-usage.c
tools/: Makefile.am  ci-Dockerfile.in  ci-build.sh  ci-install.sh  run-with-tmp-session-bus.sh
